--- a/index.html
+++ b/index.html
@@ -9,23 +9,40 @@
   <body>
     <div class="bar">DICE GAME</div>
     <div class="main">
+      <!-- LEFT -->
+
       <div class="left">
         <h1 class="player1">PLAYER 1</h1>
         <h3 class="total1">0</h3>
 
-        <div class="score1">
+        <div class="score1Box">
           <h2 class="currentScore1">Current</h2>
           <p class="currentScoreOf1">0</p>
         </div>
       </div>
 
-      <div class="mid"></div>
+      <!-- MIDDLE -->
+
+      <div class="mid">
+        <p>Select target score</p>
+        <input type="number" class="target" /><br />
+        <button class="start">START GAME</button>
+
+        <p class="img1"></p>
+        <p class="img2"></p>
+
+        <button class="roll">🎲 ROLL DICE</button>
+        <button class="hold">🛑 HOLD</button>
+        <button class="reset">RESET GAME</button>
+      </div>
+
+      <!-- RIGHT -->
 
       <div class="right">
         <h1 class="player2">PLAYER 2</h1>
         <h3 class="total2">0</h3>
 
-        <div class="score2">
+        <div class="score2Box">
           <h2 class="currentScore2">Current</h2>
           <p class="currentScoreOf2">0</p>
         </div>
