--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
         <input type="number" class="target" /><br />
         <button class="start">START GAME</button>
 
-        <p class="img1"></p>
-        <p class="img2"></p>
+        <p class="firstDice diceOne"></p>
+        <p class="secondDice diceTwo"></p>
 
         <button class="roll">🎲 ROLL DICE</button>
         <button class="hold">🛑 HOLD</button>
