--- a/index.html
+++ b/index.html
@@ -13,11 +13,12 @@
 
       <div class="left">
         <h1 class="player1">PLAYER 1</h1>
-        <h3 class="total1">0</h3>
+        <h3 class="total1"></h3>
+        <!-- <h3 class="winner1">Player 1 is the winner!</h3> -->
 
         <div class="score1Box">
           <h2 class="currentScore1">Current</h2>
-          <p class="currentScoreOf1">0</p>
+          <p class="currentScoreOf1"></p>
         </div>
       </div>
 
@@ -40,11 +41,12 @@
 
       <div class="right">
         <h1 class="player2">PLAYER 2</h1>
-        <h3 class="total2">0</h3>
+        <h3 class="total2"></h3>
+        <!-- <h3 class="winner2">Player 2 is the winner!</h3> -->
 
         <div class="score2Box">
           <h2 class="currentScore2">Current</h2>
-          <p class="currentScoreOf2">0</p>
+          <p class="currentScoreOf2"></p>
         </div>
       </div>
     </div>
