--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <title>Document</title>
+    <title>Dice Game</title>
   </head>
   <body>
     <div class="bar">DICE GAME</div>
@@ -14,7 +14,7 @@
       <div class="left">
         <h1 class="player1">PLAYER 1</h1>
         <h3 class="total1"></h3>
-        <!-- <h3 class="winner1">Player 1 is the winner!</h3> -->
+        <h3 class="winner1"></h3>
 
         <div class="score1Box">
           <h2 class="currentScore1">Current</h2>
@@ -42,7 +42,7 @@
       <div class="right">
         <h1 class="player2">PLAYER 2</h1>
         <h3 class="total2"></h3>
-        <!-- <h3 class="winner2">Player 2 is the winner!</h3> -->
+        <h3 class="winner2"></h3>
 
         <div class="score2Box">
           <h2 class="currentScore2">Current</h2>
