--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
       <!-- LEFT -->
 
       <div class="left">
-        <h1 class="player1">PLAYER 1</h1>
+        <div class="container">
+          <h1 class="player1">PLAYER 1</h1>
+          <div class="check1"></div>
+        </div>
         <h3 class="total1"></h3>
         <h3 class="winner1"></h3>
 
@@ -34,13 +37,17 @@
 
         <button class="roll">🎲 ROLL DICE</button>
         <button class="hold">🛑 HOLD</button>
+
         <button class="reset">RESET GAME</button>
       </div>
 
       <!-- RIGHT -->
 
       <div class="right">
-        <h1 class="player2">PLAYER 2</h1>
+        <div class="container">
+          <h1 class="player2">PLAYER 2</h1>
+          <div class="check2"></div>
+        </div>
         <h3 class="total2"></h3>
         <h3 class="winner2"></h3>
 
