--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <div class="left">
         <div class="container">
           <h1 class="player1">PLAYER 1</h1>
-          <div class="check1"></div>
+          <div id="check1"></div>
         </div>
         <h3 class="total1"></h3>
         <h3 class="winner1"></h3>
@@ -46,7 +46,7 @@
       <div class="right">
         <div class="container">
           <h1 class="player2">PLAYER 2</h1>
-          <div class="check2"></div>
+          <div id="check2"></div>
         </div>
         <h3 class="total2"></h3>
         <h3 class="winner2"></h3>
