--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
       <!-- RIGHT -->
 
-      <div class="right">
+      <div class="right opacity">
         <div class="container">
           <h1 class="player2">PLAYER 2</h1>
           <div id="check2"></div>
