--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     <title>Dice Game</title>
   </head>
   <body>
-    <div class="bar">DICE GAME</div>
+    <div class="bar">
+      <p class="bar">Dice Game</p>
+      <button class="music">Background Music Pause/Resume</button>
+    </div>
     <div class="main">
       <!-- LEFT -->
 
@@ -25,7 +28,7 @@
       <!-- MIDDLE -->
 
       <div class="mid">
-        <p>Select target score</p>
+        <p>Select target score ssssss</p>
         <input type="number" class="target" /><br />
         <button class="start">START GAME</button>
 
