--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <!-- MIDDLE -->
 
       <div class="mid">
-        <p>Select target score ssssss</p>
+        <p>Select target score</p>
         <input type="number" class="target" /><br />
         <button class="start">START GAME</button>
 
