--- a/index.html
+++ b/index.html
@@ -54,6 +54,17 @@
         </div>
       </div>
     </div>
+
+    <div id="pop-out">
+      <div id="message">
+        Hello
+        <button class="ok">Ok</button>
+      </div>
+    </div>
+    <div id="container">
+      Content goes here
+      <button>You can't click me</button>
+    </div>
     <script src="index.js"></script>
   </body>
 </html>
