--- a/index.html
+++ b/index.html
@@ -8,66 +8,75 @@
     <title>Dice Game</title>
   </head>
   <body>
-    <div class="bar">
-      <div class="playerOneContainer">
-        <p class="playerOne">Player1</p>
-        <p class="playerScore1">0</p>
+    <div class="big-cont hidden">
+      <div class="cont">
+        <button class="playAgain size">Play Again</button>
+        <h3 class="or">Or</h3>
+        <button class="resetGame size">Reset Game</button>
       </div>
-      <div class="playerTwoContainer">
-        <p class="playerTwo">Player2</p>
-        <p class="playerScore2">0</p>
-      </div>
-      <p class="bar">Dice Game</p>
-      <button class="music">Background Music Pause/Resume</button>
     </div>
-    <div class="main">
-      <!-- LEFT -->
-
-      <div class="left">
-        <h1 class="player1">PLAYER 1</h1>
-        <h3 class="total1"></h3>
-        <h3 class="winner1"></h3>
-
-        <div class="score1Box">
-          <h2 class="currentScore1">Current</h2>
-          <p class="currentScoreOf1"></p>
+    <div class="game">
+      <div class="bar">
+        <div class="playerOneContainer">
+          <p class="playerOne">Player1</p>
+          <p class="playerScore1">0</p>
         </div>
+        <div class="playerTwoContainer">
+          <p class="playerTwo">Player2</p>
+          <p class="playerScore2">0</p>
+        </div>
+        <p class="bar">Dice Game</p>
+        <button class="music">Background Music Pause/Resume</button>
       </div>
+      <div class="main">
+        <!-- LEFT -->
 
-      <!-- MIDDLE -->
+        <div class="left">
+          <h1 class="player1">PLAYER 1</h1>
+          <h3 class="total1"></h3>
+          <h3 class="winner1"></h3>
 
-      <div class="mid">
-        <p>Select target score</p>
-        <input type="number" class="target" /><br />
-        <button class="start">START GAME</button>
-        <div>
-          <img
-            class="pop-up gif hidden"
-            src="./assets/giphy.gif"
-            alt="bad luck giphy"
-          />
+          <div class="score1Box">
+            <h2 class="currentScore1">Current</h2>
+            <p class="currentScoreOf1"></p>
+          </div>
         </div>
 
-        <p class="firstDice diceOne"></p>
-        <p class="secondDice diceTwo"></p>
+        <!-- MIDDLE -->
 
-        <button class="roll">🎲 ROLL DICE</button>
+        <div class="mid">
+          <p>Select target score</p>
+          <input type="number" class="target" /><br />
+          <button class="start">START GAME</button>
+          <div>
+            <img
+              class="pop-up gif hidden"
+              src="./assets/giphy.gif"
+              alt="bad luck giphy"
+            />
+          </div>
 
-        <button class="hold">🛑 HOLD</button>
+          <p class="firstDice diceOne"></p>
+          <p class="secondDice diceTwo"></p>
 
-        <button class="reset">RESET GAME</button>
-      </div>
+          <button class="roll">🎲 ROLL DICE</button>
 
-      <!-- RIGHT -->
+          <button class="hold">🛑 HOLD</button>
 
-      <div class="right opacity">
-        <h1 class="player2">PLAYER 2</h1>
-        <h3 class="total2"></h3>
-        <h3 class="winner2"></h3>
+          <button class="reset">RESET GAME</button>
+        </div>
 
-        <div class="score2Box">
-          <h2 class="currentScore2">Current</h2>
-          <p class="currentScoreOf2"></p>
+        <!-- RIGHT -->
+
+        <div class="right opacity">
+          <h1 class="player2">PLAYER 2</h1>
+          <h3 class="total2"></h3>
+          <h3 class="winner2"></h3>
+
+          <div class="score2Box">
+            <h2 class="currentScore2">Current</h2>
+            <p class="currentScoreOf2"></p>
+          </div>
         </div>
       </div>
     </div>
